--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -4,7 +4,5 @@ layout: archive
 
 {{ content }}
 
-{% assign entries_layout = page.entries_layout | default: 'list' %}
-<div class="entries-{{ entries_layout }}">
-  {% include posts-category.html taxonomy=page.taxonomy type=entries_layout %}
-</div>
+{% assign posts = site.categories.Cpp %}
+{% for post in posts %} {% include archive-single2.html type=page.entries_layout %} {% endfor %}
