--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -4,5 +4,5 @@ layout: archive
 
 {{ content }}
 
-{% assign posts = site.categories.Cpp %}
+{% assign posts = site.categories %}
 {% for post in posts %} {% include archive-single2.html type=page.entries_layout %} {% endfor %}
