--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,8 +1,6 @@
----
-layout: archive
----
-
-{{ content }}
-
-{% assign posts = site.categories %}
-{% for post in posts %} {% include archive-single2.html type=page.entries_layout %} {% endfor %}
+--- 
+layout: archive 
+--- 
+{{ content }} 
+{% assign entries_layout = page.entries_layout | default: 'list' %}
+{% include posts-category.html taxonomy=page.taxonomy type=entries_layout %}
