--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,4 +1,6 @@
---- layout: archive --- 
-{{ content }} 
+---
+layout: archive
+---
+{{ content }}
 {% assign entries_layout = page.entries_layout | default: 'list' %}
 {% include posts-category.html taxonomy=page.taxonomy type=entries_layout %}
